; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/spacetime/keymaps/kyleterry/extr_keymap.c_td_common.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/spacetime/keymaps/kyleterry/extr_keymap.c_td_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@KC_O = common dso_local global i32 0, align 4
@KC_INS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @td_common(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %20 [
    i32 1, label %8
    i32 2, label %14
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* @KC_O, align 4
  %10 = call i32 @C(i32 %9)
  %11 = call i32 @tap_code16(i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = call i32 @reset_tap_dance(%struct.TYPE_4__* %12)
  br label %20

14:                                               ; preds = %2
  %15 = load i32, i32* @KC_INS, align 4
  %16 = call i32 @S(i32 %15)
  %17 = call i32 @tap_code16(i32 %16)
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = call i32 @reset_tap_dance(%struct.TYPE_4__* %18)
  br label %20

20:                                               ; preds = %2, %14, %8
  ret void
}

declare dso_local i32 @tap_code16(i32) #1

declare dso_local i32 @C(i32) #1

declare dso_local i32 @reset_tap_dance(%struct.TYPE_4__*) #1

declare dso_local i32 @S(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
